tests/invalid/Assign_Invalid_7.whiley
import * from whiley.lang.*

function f(int x, int y) -> int:
    return x < y
